# hiviewdfx_hitrace

./: BUILD.gn  README.md  README_zh.md  bundle.json
cmd/: BUILD.gn  hitrace_cmd.cpp
common/: common_define.h  hitrace_define.h
config/: BUILD.gn  hitrace_ext.cfg
docs/: README.md
docs/hitrace_cmd/: boot-trace.md
example/: BUILD.gn
frameworks/hitrace_ndk/: BUILD.gn
frameworks/native/c_wrapper/: BUILD.gn
frameworks/trace_factory/: BUILD.gn  trace_content.cpp  trace_content.h  trace_source_factory.cpp  trace_source_factory.h
frameworks/tracedump_executor/: BUILD.gn  trace_dump_executor.cpp  trace_dump_executor.h  trace_dump_pipe.cpp  trace_dump_strategy.cpp
interfaces/cj/kits/ffi/: BUILD.gn
interfaces/ets/ani/hitracechain/: BUILD.gn
interfaces/ets/ani/hitracechain/include/: hitrace_chain_ani_parameter_name.h
interfaces/ets/ani/hitracemeter/: BUILD.gn
interfaces/ets/ani/hitracemeter/src/: hitracemeter_ani.cpp
interfaces/js/kits/napi/: BUILD.gn
interfaces/js/kits/napi/bytrace_napi/: BUILD.gn
interfaces/js/kits/napi/hitracemeter/: napi_hitrace_meter.cpp
interfaces/native/innerkits/: BUILD.gn  hitrace.map  hitrace.para  hitrace.para.dac  hitrace_option.map
interfaces/native/innerkits/include/: hitrace_dump.h
interfaces/native/innerkits/src/: hitrace_dump.cpp  hitrace_meter.cpp
interfaces/native/innerkits/src/hitrace_option/: trace_context.cpp
test/: BUILD.gn
test/systemtest/: hitrace_systemtest.cpp
test/unittest/: BUILD.gn
test/unittest/hitrace_cmd/: hitrace_cmd.h  hitrace_cmd_test.cpp
test/unittest/hitrace_dump/: hitrace_async_read_timeout.cpp  hitrace_async_write_timeout.cpp  hitrace_dump_test.cpp
test/unittest/hitrace_event/: hitrace_event_test.cpp
test/unittest/hitrace_meter/: hitrace_meter_test_utils.cpp
test/unittest/hitrace_option/: hitrace_option_test.cpp  hitrace_option_util_test.cpp
test/unittest/hitrace_utils/: hitrace_ageing_test.cpp  hitrace_utils_test.cpp  trace_file_utils_test.cpp
test/unittest/trace_factory/: hitrace_factory_test.cpp
test/unittest/tracedump_executor/: trace_dump_executor_test.cpp
utils/: BUILD.gn  common_utils.cpp  common_utils.h  file_ageing_utils.cpp  file_ageing_utils.h  trace_file_utils.cpp  trace_json_parser.cpp
