# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hitrace/hitrace.gni")
import("//build/ohos.gni")
import("//build/test.gni")

group("hitrace_systemtest") {
  testonly = true
  deps = [ "systemtest:HitraceSystemTest" ]
}

group("hitrace_unittest") {
  testonly = true
  deps = [
    "unittest:HitraceAgeingTest",
    "unittest:HitraceAsyncReadTimeoutTest",
    "unittest:HitraceAsyncWriteTimeoutTest",
    "unittest:HitraceCTest",
    "unittest:HitraceChainNDKTest",
    "unittest:HitraceCppTest",
    "unittest:HitraceDumpExecutorNewTest",
    "unittest:HitraceDumpTest",
    "unittest:HitraceEventTest",
    "unittest:HitraceFactoryTest",
    "unittest:HitraceMeterFfiTest",
    "unittest:HitraceMeterNDKTest",
    "unittest:HitraceMeterTest",
    "unittest:HitraceOptionTest",
    "unittest:HitraceUtilsTest",
    "unittest/rust/hitrace_meter:rust_meter_test",
    "unittest/rust/hitracechain:rust_hitracechain_test",
  ]
  if (support_jsapi) {
    deps += [
      "unittest/common/napi:unittest",
      "unittest:HitraceCMDTest",
    ]
  }
}

group("hitrace_fuzztest") {
  testonly = true
  deps = [
    "fuzztest:HitraceCmdFuzzTest",
    "fuzztest:HitraceDumpFuzzTest",
    "fuzztest:HitraceMeterFuzzTest",
    "fuzztest:HitraceOptionFuzzTest",
  ]
}
