# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hitrace/hitrace.gni")
import("//build/ohos.gni")

ohos_source_set("hitrace_common_utils") {
  branch_protector_ret = "pac_ret"
  include_dirs = [
    ".",
    "$hitrace_common_path",
  ]
  configs = [ "$hitrace_common_path/build:coverage_flags" ]
  sources = [ "common_utils.cpp" ]
  if (defined(ohos_lite)) {
    external_deps = [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  external_deps += [
    "bounds_checking_function:libsec_shared",
    "init:libbegetutil",
  ]
  part_name = "hitrace"
  subsystem_name = "hiviewdfx"
}

ohos_source_set("hitrace_file_utils") {
  branch_protector_ret = "pac_ret"
  include_dirs = [
    ".",
    "$hitrace_common_path",
  ]
  sources = [ "trace_file_utils.cpp" ]
  if (defined(ohos_lite)) {
    external_deps = [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  external_deps += [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
  ]
  part_name = "hitrace"
  subsystem_name = "hiviewdfx"
}

ohos_source_set("hitrace_json_parser") {
  branch_protector_ret = "pac_ret"
  include_dirs = [
    ".",
    "$hitrace_common_path",
  ]
  configs = [ "$hitrace_common_path/build:coverage_flags" ]
  sources = [ "trace_json_parser.cpp" ]
  if (defined(ohos_lite)) {
    external_deps = [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }

  defines = []
  if (hitrace_snapshot_tracebuffer_size != 0) {
    defines +=
        [ "SNAPSHOT_TRACEBUFFER_SIZE=${hitrace_snapshot_tracebuffer_size}" ]
  }
  if (hitrace_snapshot_file_limit != 0) {
    defines += [ "SNAPSHOT_FILE_LIMIT=${hitrace_snapshot_file_limit}" ]
  }
  if (hitrace_record_file_limit != 0) {
    defines += [ "RECORD_FILE_LIMIT=${hitrace_record_file_limit}" ]
  }

  external_deps += [
    "cJSON:cjson",
    "c_utils:utils",
  ]
  part_name = "hitrace"
  subsystem_name = "hiviewdfx"
}
