# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hitrace/hitrace.gni")
import("//build/ohos.gni")

ohos_shared_library("cj_hitracechain_ffi") {
  branch_protector_ret = "pac_ret"
  include_dirs = [
    "include",
    "$hitrace_interfaces_path/native/innerkits/include/hitrace",
    "$hitrace_frameworks_path/include",
  ]

  sources = [
    "src/hitracechain_ffi.cpp",
    "src/hitracechain_impl.cpp",
  ]

  deps = [ "$hitrace_interfaces_path/native/innerkits:libhitracechain" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "napi:cj_bind_ffi",
  ]

  innerapi_tags = [ "platformsdk" ]

  part_name = "hitrace"
  subsystem_name = "hiviewdfx"
}

ohos_shared_library("cj_hitracemeter_ffi") {
  branch_protector_ret = "pac_ret"
  include_dirs = [
    "include",
    "$hitrace_frameworks_path/include",
  ]
  sources = [
    "src/hitracemeter_ffi.cpp",
    "src/hitracemeter_impl.cpp",
  ]

  deps = [ "$hitrace_interfaces_path/native/innerkits:hitrace_meter" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "napi:cj_bind_ffi",
  ]

  innerapi_tags = [ "platformsdk" ]

  subsystem_name = "hiviewdfx"
  part_name = "hitrace"
}
