# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hitrace/hitrace.gni")
import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

ohos_shared_library("hitrace_meter_ani") {
  branch_protector_ret = "pac_ret"
  shlib_type = "ani"
  sources = [ "./src/hitracemeter_ani.cpp" ]
  deps = [ "$hitrace_interfaces_path/native/innerkits:hitrace_meter" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "runtime_core:ani",
  ]

  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  subsystem_name = "hiviewdfx"
  part_name = "hitrace"
  output_extension = "so"
}

generate_static_abc("hitrace_meter") {
  base_url = "./ets"
  files = [ "./ets/@ohos.hiTraceMeter.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/hitrace_meter.abc"
}

ohos_prebuilt_etc("hitrace_meter_etc") {
  source = "$target_out_dir/hitrace_meter.abc"
  module_install_dir = "framework"
  subsystem_name = "hiviewdfx"
  part_name = "hitrace"
  deps = [ ":hitrace_meter" ]
}
