# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hitrace/hitrace.gni")
import("//build/ohos.gni")

ohos_shared_library("hitracechain_napi") {
  branch_protector_ret = "pac_ret"
  include_dirs = [
    ".",
    "include",
    "$hitrace_common_path",
  ]

  sources = [
    "src/napi_hitrace_init.cpp",
    "src/napi_hitrace_js.cpp",
    "src/napi_hitrace_util.cpp",
  ]

  deps = [ "$hitrace_interfaces_path/native/innerkits:libhitracechain" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "napi:ace_napi",
    "node:node_header_notice",
  ]
  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  relative_install_dir = "module"
  part_name = "hitrace"
  subsystem_name = "hiviewdfx"
}

ohos_shared_library("hitracemeter_napi") {
  branch_protector_ret = "pac_ret"
  include_dirs = [
    ".",
    "$hitrace_common_path",
  ]
  sources = [ "hitracemeter/napi_hitrace_meter.cpp" ]

  deps = [ "$hitrace_interfaces_path/native/innerkits:hitrace_meter" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "napi:ace_napi",
    "node:node_header_notice",
  ]
  if (defined(ohos_lite)) {
    external_deps += [ "hilog_lite:hilog_lite" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  relative_install_dir = "module"
  subsystem_name = "hiviewdfx"
  part_name = "hitrace"
}
